--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cursos gratis</title>
+    <title>Curso em video</title>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
  <main>
     <header>
-        <h1>Titulo do site</h1>
+        <h1>Curso em video</h1>
+        <img src="" alt="">
     </header>
     <article>
-        <h2>curso cc</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque doloribus aspernatur blanditiis accusamus laborum corrupti quasi magnam, doloremque, illum quaerat ullam. Sit porro velit sunt cumque minus eos esse repudiandae?</p>
+        <h2>Curso de HTML com CSS3</h2>
+        <p>A <abbr title="HyperText Markup Language">HTML</abbr>é uma linguagem de marcação para criação de sites. Atualmente na versão 5, ela usa a semantica dos elementos para criar o conteudo de uma pagina Web. com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as configuraçoes visuais que um site vai ter.</p>
     </article>
     <article>
-        <h2> Artigo 002</h2>
-        <p>Texto do artigo 002</p>
+        <h2> Curso JavaScript</h2>
+        <p><abbr title="JavaScript">JavaScript</abbr>é uma linguagem script criada para aumentar os recursos js</p>
     </article>
  </main>   
 </body>
