--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
  <main>
     <header>
         <h1>Curso em video</h1>
-        <img src="" alt="">
+        <img src="imagens/curso-em-video-cor.png" alt="Curso em Video">
     </header>
     <article>
         <h2>Curso de HTML com CSS3</h2>
+        <img class="lado" src="imagens/curso-html-css.png" alt="">
         <p>A <abbr title="HyperText Markup Language">HTML</abbr>é uma linguagem de marcação para criação de sites. Atualmente na versão 5, ela usa a semantica dos elementos para criar o conteudo de uma pagina Web. com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as configuraçoes visuais que um site vai ter.</p>
+        <p><a href="curso-html.html">Acesse o curso HTML5</a></p>
     </article>
     <article>
         <h2> Curso JavaScript</h2>
-        <p><abbr title="JavaScript">JavaScript</abbr>é uma linguagem script criada para aumentar os recursos js</p>
+        <img class="lado" src="imagens/curso-javascript.png" alt="">
+        <p><abbr title="JavaScript">JavaScript</abbr>é uma linguagem script criada para aumentar a interatividade entre um site e seus visitantes. Os codigos en JS sao executados dentro do navegador e dao acesso aos elementos HTML oor meio de <abbr title="Document Object Model">DOM</abbr></p>
+        <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
     </article>
  </main>   
 </body>
